--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
     <!-- header -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="logotype"
-          >Web<span class="logo-header">Studio</span>
-        </a>
         <ul class="list-nav">
+          <li>
+            <a href="./index.html" class="logotype"
+              >Web<span class="logo-header">Studio</span></a
+            >
+          </li>
           <li><a href="" class="link-nav">Studio </a></li>
           <li><a href="" class="link-nav">Portfolio </a></li>
           <li><a href="" class="link-nav">Contacts </a></li>
         </ul>
       </nav>
-      <address>
+      <address class="addres">
         <ul class="list-nav">
           <li>
             <a href="mailto:info@devstudio.com" class="link-addr"
@@ -94,9 +96,9 @@
         </ul>
       </section>
       <!-- section-3 -->
-      <section class="section-3">
+      <section class="section-team">
         <h2 class="section-title">Our Team</h2>
-        <ul class="list-section3">
+        <ul class="list-section-team">
           <li>
             <img
               src="./images/our-team/img_1.jpg"
@@ -171,7 +173,7 @@
               width="360"
               height="300"
             />
-            <h3 class="list-item-title">Meditaion App</h3>
+            <h3 class="list-item-title">Meditation App</h3>
             <p class="list-item-text">App</p>
           </li>
           <li>
