--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       <!-- section-3 -->
       <section class="section-team">
         <h2 class="section-title">Our Team</h2>
-        <ul class="list-section-team">
-          <li>
+        <ul>
+          <li class="list-team">
             <img
               src="./images/our-team/img_1.jpg"
               alt="Mark Guerrero"
@@ -109,7 +109,7 @@
             <h3 class="list-item-title">Mark Guerrero</h3>
             <p class="list-item-text">Product Designer</p>
           </li>
-          <li>
+          <li class="list-team">
             <img
               src="./images/our-team/img_2.jpg"
               alt="Tom Ford"
@@ -119,7 +119,7 @@
             <h3 class="list-item-title">Tom Ford</h3>
             <p class="list-item-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list-team">
             <img
               src="./images/our-team/img_3.jpg"
               alt="Camila Garcia"
@@ -129,7 +129,7 @@
             <h3 class="list-item-title">Camila Garcia</h3>
             <p class="list-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="list-team">
             <img
               src="./images/our-team/img_4.jpg"
               alt="Daniel Wilson"
