--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
     <!-- header -->
     <header class="header">
       <nav>
+        <a href="./index.html" class="logotype"
+          >Web<span class="logo-header">Studio</span></a
+        >
         <ul class="list-nav">
-          <li>
-            <a href="./index.html" class="logotype"
-              >Web<span class="logo-header">Studio</span></a
-            >
-          </li>
-          <li><a href="" class="link-nav">Studio </a></li>
+          <li><a href="./index.html" class="link-nav">Studio </a></li>
           <li><a href="" class="link-nav">Portfolio </a></li>
           <li><a href="" class="link-nav">Contacts </a></li>
         </ul>
