--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- header -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="logotype"
+        <a class="logotype" href="./index.html"
           >Web<span class="logo-header">Studio</span></a
         >
         <ul class="list-nav">
